# maep-qt

./: .bzrignore  .gitignore  Makefile.in  README  aclocal.m4  configure  configure.in  maep-qt.desktop  maep.desktop  maep.pro  todo.txt
data/: AUTHORS  COPYING  Makefile.in  diskcache_check.sh  harbour-maep-qt.desktop  maep.desktop
debian/: changelog  control  control.in  copyright  dirs  postinst  rules
qmlLibs/: locationvaluetypeprovider.cpp  locationvaluetypeprovider.h  notification.cpp  notification.h  org.freedesktop.Notifications.xml  qdeclarativecoordinate.cpp  qdeclarativecoordinate_p.h  qquickfolderlistmodel.h
rpm/: harbour-maep-qt.spec  maep-qt.spec
src/: About.qml  FileChooser.qml  Header.qml  Makefile.in  Notification.qml  PlaceHeader.qml  PlaceView.qml  Settings.qml  Sources.qml  TrackHeader.qml  TrackView.qml  about.c  about.h  conf.c  conf.h  config.h  converter.c  converter.h  gconf_clear.sh  geonames.c  geonames.h  gps.c  gps.h  graph.c  graph.h  hxm.c  hxm.h  icon.c  icon.h  img_loader.c  img_loader.h  maep.pro  main-nosilica.qml  main.c  main.cpp  main.qml  menu.c  menu.h  misc.c  misc.h  (+11 more)
src/osm-gps-map/: layer-gps.c  layer-gps.h  layer-wiki.c  layer-wiki.h  osd-utils.c  osm-gps-map-gtk.c  osm-gps-map-gtk.h  osm-gps-map-gtkwidget.c  osm-gps-map-gtkwidget.h  osm-gps-map-layer.c  osm-gps-map-layer.h  osm-gps-map-osd-classic.c  osm-gps-map-osd-classic.h  osm-gps-map-osd.c  osm-gps-map-qt.cpp  osm-gps-map-qt.h  osm-gps-map-types.h  osm-gps-map.c  osm-gps-map.h  osm-gps-map.orig.c  source.c  source.h  sourcemodel.cpp  sourcemodel.h
translations/: es.ts  fr_FR.ts  harbour-maep-qt.ts  sv.ts  zh_CN.ts
